--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -280,7 +280,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -305,7 +305,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -330,7 +330,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -355,7 +355,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -384,7 +384,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -409,7 +409,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -434,7 +434,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -459,7 +459,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -488,7 +488,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -513,7 +513,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -538,7 +538,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -563,7 +563,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -668,7 +668,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -698,7 +698,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -723,7 +723,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -748,7 +748,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -773,7 +773,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -802,7 +802,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -827,7 +827,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -852,7 +852,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -877,7 +877,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -906,7 +906,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -931,7 +931,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -956,7 +956,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -981,7 +981,7 @@
                                             <div class="price-wrap">
                                                 <div class="row align-items-center">
                                                     <div class="col-6">
-                                                        <a href="course.html">Enroll now</a>
+                                                        <a href="Course.html">Enroll now</a>
                                                     </div>
                                                 </div>
                                             </div>
